Subindo controllers e services, faltando alteração do curso e planos de pagamento.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=ApiBimo
 spring.datasource.url=jdbc:postgresql://bimo-germinare-8711.d.aivencloud.com:15864/bimo
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_xsj8nxvaoytsbU1z15g
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 server.port=8086
