--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_xsj8nxvaoytsbU1z15g
 spring.jpa.hibernate.ddl-auto=none
 server.port=8086
+
+#gpt
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
