--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,6 +33,6 @@ jobs:
     - name: Render Deploy Action
       uses: johnbeynon/render-deploy-action@v0.0.8
       with:
-        service-id: ${{ secrets.SERVICE_ID }}
-        api-key: ${{ secrets.API_KEY }}
+        service-id: srv-cro99bg8fa8c738p91hg
+        api-key: MPZjKhu4sRM
         
