--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,9 +2,9 @@ name: Deploy render
  
 on:
   push:
-    branches: [ "DEV" ]
+    branches: [ "PROD" ]
   pull_request:
-    branches: [ "DEV" ]
+    branches: [ "PROD" ]
  
   workflow_dispatch:
  
